[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.4.8"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.17.0", features = ["full"] }
